# StrateonPlugin

./: .gitignore  CMakeLists.txt  StrateonPlugin.cpp  StrateonPlugin.hpp  StrateonSideBar.cpp  StrateonSideBar.hpp  StrateonToolButton.cpp  StrateonToolButton.hpp  user-config.cmake
Core/: MainWindow.cpp
Editor/: filegestion.cpp
